--- a/.github/workflows/sort-translations.yml
+++ b/.github/workflows/sort-translations.yml
@@ -95,7 +95,7 @@ jobs:
                   forceQuotes: false
                 });
                 
-                const unescaped = output.replace(/\\\\u([0-9A-Fa-f]{4})/g, (_, code) => String.fromCharCode(parseInt(code, 16)));
+                const unescaped = output.replace(/\\u([0-9A-Fa-f]{4})/g, (_, code) => String.fromCharCode(parseInt(code, 16)));
                 
                 const finalContent = header.join('\\n') + (header.length > 0 ? '\\n' : '') + unescaped;
                 fs.writeFileSync(file, finalContent);
@@ -228,7 +228,7 @@ jobs:
                     forceQuotes: false
                   });
                   
-                  const unescaped = output.replace(/\\\\u([0-9A-Fa-f]{4})/g, (_, code) => String.fromCharCode(parseInt(code, 16)));
+                  const unescaped = output.replace(/\\u([0-9A-Fa-f]{4})/g, (_, code) => String.fromCharCode(parseInt(code, 16)));
                   
                   const finalContent = header.join("\\n") + (header.length > 0 ? "\\n" : "") + unescaped;
                   fs.writeFileSync(file, finalContent);
