--- a/.github/workflows/i18n-sync.yml
+++ b/.github/workflows/i18n-sync.yml
@@ -3,7 +3,7 @@ name: Sync & Sort Translations
 on:
   push:
     paths:
-      - 'locales/*.yml' # Only run when translation files change
+      - 'translations/*.yml' # Only run when translation files change
   workflow_dispatch:
 
 permissions:
