--- a/.github/workflows/i18n-sync.yml
+++ b/.github/workflows/i18n-sync.yml
@@ -3,7 +3,7 @@ name: Sync & Sort Translations
 on:
   push:
     paths:
-      - 'translations/*.yml' # Only run when translation files change
+      - 'translations/*.yml'
   workflow_dispatch:
 
 permissions:
@@ -23,27 +23,22 @@ jobs:
           node-version: '20'
 
       - name: Install Dependencies
-        # We install js-yaml on the fly so you don't need it in your package.json
         run: npm install js-yaml
 
       - name: Run Translation Manager
         run: node scripts/translation-manager.js
 
       - name: Commit and Push Changes
-        env: 
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config user.name "GitHub Action"
-          git config user.email "action@github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           
-          # Check for changes
           if [[ -n $(git status -s) ]]; then
             git add translations/*.yml
-            git commit -m "chore: auto-sort and sync translation keys"
-            
-            # Set the remote URL to use the GITHUB_TOKEN for authentication
+            git commit -m "chore: auto-sort and sync translation keys [skip ci]"
             git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
-            
             git push
           else
             echo "No changes detected."
@@ -58,12 +53,42 @@ jobs:
             echo "orphans_found=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Create Issue for Orphans
+      # SCENARIO A: Orphans Found -> Create or Update Issue
+      - name: Report Orphans (Create or Update)
         if: steps.check_report.outputs.orphans_found == 'true'
-        uses: peter-evans/create-issue-from-file@v5
-        with:
-          title: "⚠️ Orphaned Translation Keys"
-          content-filepath: ./orphan_report.md
-          labels: |
-            maintenance
-            i18n
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ISSUE_TITLE: "⚠️ Orphaned Translation Keys"
+        run: |
+          # 1. Search for existing open issue by title
+          ISSUE_ID=$(gh issue list --search "$ISSUE_TITLE in:title" --state open --json number --jq '.[0].number')
+          
+          if [ -n "$ISSUE_ID" ]; then
+            echo "Found existing issue #$ISSUE_ID. Updating body..."
+            gh issue edit "$ISSUE_ID" --body-file ./orphan_report.md
+            gh issue comment "$ISSUE_ID" --body "Translation report updated. Please review the description."
+          else
+            echo "Creating new issue..."
+            gh issue create \
+              --title "$ISSUE_TITLE" \
+              --body-file ./orphan_report.md \
+              --assignee "${{ github.actor }}" \
+              --label "maintenance,i18n"
+          fi
+
+      # SCENARIO B: No Orphans -> Close Issue if it exists
+      - name: Close Orphan Issue
+        if: steps.check_report.outputs.orphans_found == 'false'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ISSUE_TITLE: "⚠️ Orphaned Translation Keys"
+        run: |
+          # 1. Search for existing open issue by title
+          ISSUE_ID=$(gh issue list --search "$ISSUE_TITLE in:title" --state open --json number --jq '.[0].number')
+          
+          if [ -n "$ISSUE_ID" ]; then
+            echo "Orphans resolved. Closing issue #$ISSUE_ID..."
+            gh issue close "$ISSUE_ID" --comment "All orphaned keys have been resolved by the latest sync. Closing this issue."
+          else
+            echo "No open issue found to close."
+          fi
